# Hermod

./: .gitignore  BenchClient.Dockerfile  BenchServer.Dockerfile  Cargo.toml  Client.Dockerfile  Dockerfile  README.md  Server.Dockerfile  bench.sh  pcap.py  plot.py  pull.sh  run-bench.sh  run-test.sh  test.sh
.github/workflows/: rust.yml
src/: cli.rs  client.rs  command.rs  config.rs  consts.rs  error.rs  genkey.rs  hacl.rs  hermod.rs  host.rs  identity.rs  lib.rs  log.rs  message.rs  noise.rs  peer.rs  request.rs  server.rs  share_key.rs
tools/: bench.rs  plot.py  pull.sh  run-bench.sh  run-test.sh  test.sh
