[package]
name = "hermod"
version = "0.1.0"
authors = ["dat14mak <dat14mak@student.lu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snow = "0.6.2"
base64 = "0.11.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.5.0", features = ["unstable"] }
bincode = "1.2.1"
clap = "2.33.0"
