[package]
name = "hermod"
version = "0.1.0"
authors = ["dat14mak <dat14mak@student.lu.se>"]
edition = "2018"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
snow = "0.6.2"
base64 = "0.11.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
async-std = { version = "1.5.0", features = ["unstable"] }
clap = "2.33.0"
dirs = "2.0.2"
rand = "0.7.3"
daemonize = "0.4.1"
log = "0.4"
fern = "0.5"
chrono = "0.4"
indicatif = "0.14.0"
async-listen = "0.2.0"
walkdir = "2.3.1"
futures = "0.3.4"
